--- a/app/src/main/res/layout/fragment_income.xml
+++ b/app/src/main/res/layout/fragment_income.xml
@@ -1,6 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/tv_income"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:padding="10dp"
+        android:text="Income"
+        android:textColor="@color/black"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.tistory.zladnrms.roundablelayout.RoundableLayout
+        android:id="@+id/rv_layout"
+        android:layout_width="0dp"
+        android:layout_height="520dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/dark_grey"
+        android:elevation="10dp"
+        android:padding="10dp"
+        app:cornerLeftSide="20dp"
+        app:cornerRightSide="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/tv_income"
+        app:layout_constraintStart_toStartOf="@+id/tv_income"
+        app:layout_constraintTop_toBottomOf="@+id/tv_income">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_income"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:backgroundTint="@android:color/transparent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            tools:listitem="@layout/rv_item" />
+
+    </com.tistory.zladnrms.roundablelayout.RoundableLayout>
+
+
+    <com.tistory.zladnrms.roundablelayout.RoundableLayout
+        android:layout_width="0dp"
+        android:layout_height="82dp"
+        android:clickable="true"
+        android:elevation="10dp"
+        app:cornerLeftSide="20dp"
+        app:cornerRightSide="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/rv_layout"
+        app:layout_constraintStart_toStartOf="@+id/rv_layout"
+        app:layout_constraintTop_toBottomOf="@+id/rv_layout">
+
+        <TextView
+            android:id="@+id/tv_total"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:backgroundTint="@color/dark_grey"
+            android:gravity="center"
+            android:maxLines="1"
+            android:padding="10dp"
+            android:text="Total: +17.619,7 TL"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="" />
+    </com.tistory.zladnrms.roundablelayout.RoundableLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
