--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -134,12 +134,13 @@
         app:layout_constraintTop_toTopOf="@+id/rl_btn_add">
 
         <TextView
+            android:id="@+id/tv_total"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:backgroundTint="@color/green"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Total: +17.619,7"
+            android:text="Total:"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
