--- a/app/src/main/res/layout/fragment_add_edit.xml
+++ b/app/src/main/res/layout/fragment_add_edit.xml
@@ -8,12 +8,12 @@
 
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tv_header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:padding="10dp"
-        android:text="Add/Edit"
+        android:text="Add"
         android:textColor="@color/black"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,16 +24,16 @@
     <com.tistory.zladnrms.roundablelayout.RoundableLayout
         android:id="@+id/rl_add_edit"
         android:layout_width="0dp"
-        android:layout_height="445dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/dark_grey"
         android:elevation="10dp"
         app:cornerLeftSide="20dp"
         app:cornerRightSide="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/textView5"
-        app:layout_constraintStart_toStartOf="@id/textView5"
-        app:layout_constraintTop_toBottomOf="@id/textView5">
+        app:layout_constraintEnd_toEndOf="@id/tv_header"
+        app:layout_constraintStart_toStartOf="@id/tv_header"
+        app:layout_constraintTop_toBottomOf="@id/tv_header">
 
         <EditText
             android:id="@+id/et_title"
@@ -82,24 +82,83 @@
             app:layout_constraintStart_toStartOf="@id/et_title"
             app:layout_constraintTop_toBottomOf="@id/et_cost" />
 
+        <TextView
+            android:id="@+id/tv_category"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Category"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="4dp"
+            app:layout_constraintTop_toBottomOf="@id/til_save_type"
+            app:layout_constraintStart_toStartOf="@id/et_date"
+            app:layout_constraintEnd_toEndOf="@id/et_date"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_category"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="@+id/et_date"
+            app:layout_constraintStart_toStartOf="@+id/et_date"
+            app:layout_constraintTop_toBottomOf="@id/tv_category">
+
+
+            <RadioGroup
+                android:id="@+id/radio_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/rb_category1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Category1"
+                    android:layout_margin="3dp"
+                    android:textColor="@color/white" />
+
+                <RadioButton
+                    android:id="@+id/rb_category2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Category2"
+                    android:layout_margin="3dp"
+                    android:textColor="@color/white" />
+
+                <RadioButton
+                    android:id="@+id/rb_category3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Category3"
+                    android:layout_margin="3dp"
+                    android:textColor="@color/white" />
+
+            </RadioGroup>
+
+
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_save_type"
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:background="@android:color/transparent"
             android:fontFamily="@font/josefin_sans_bold"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            app:layout_constraintEnd_toEndOf="@+id/et_date"
+
+            app:layout_constraintStart_toStartOf="@+id/et_date"
             app:layout_constraintTop_toBottomOf="@+id/et_date">
 
             <AutoCompleteTextView
                 android:id="@+id/act_save_type"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/josefin_sans_bold"
                 android:hint="Type"
                 android:inputType="none"
@@ -123,7 +182,7 @@
             app:layout_constraintEnd_toStartOf="@+id/btn_save"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/til_save_type" />
+            app:layout_constraintTop_toBottomOf="@+id/til_category" />
 
         <Button
             android:id="@+id/btn_save"
@@ -138,7 +197,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_add"
-            app:layout_constraintTop_toBottomOf="@+id/til_save_type" />
+            app:layout_constraintTop_toBottomOf="@+id/til_category" />
 
 
     </com.tistory.zladnrms.roundablelayout.RoundableLayout>
