--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -24,16 +24,16 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_margin="20dp"
+        android:src="@drawable/ic_user_image"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_user_image" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_logout"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:clickable="true"
         android:layout_margin="20dp"
+        android:clickable="true"
         android:contentDescription="logout"
         app:layout_constraintBottom_toBottomOf="@+id/iv_profile_image"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,8 +81,8 @@
             android:id="@+id/rv_summary"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:backgroundTint="@android:color/transparent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -96,11 +96,11 @@
         android:id="@+id/rl_btn_add"
         android:layout_width="0dp"
         android:layout_height="82dp"
+        android:layout_marginEnd="30dp"
         android:backgroundTint="@color/dark_grey"
         android:elevation="10dp"
         app:cornerLeftSide="20dp"
         app:cornerRightSide="20dp"
-        android:layout_marginEnd="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/roundableLayout"
         app:layout_constraintStart_toStartOf="@+id/rv_layout"
