--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/splashFragment"
-        android:name="com.example.smartwallet_hw6.ui.SplashFragment"
+        android:name="com.example.smartwallet_hw6.ui.splash.SplashFragment"
         android:label="SplashFragment"
-        tools:layout="@layout/fragment_splash" >
+        tools:layout="@layout/fragment_splash">
         <action
             android:id="@+id/splashToSignin"
             app:destination="@id/signinFragment" />
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/signinFragment"
-        android:name="com.example.smartwallet_hw6.ui.SigninFragment"
+        android:name="com.example.smartwallet_hw6.ui.signin.SigninFragment"
         android:label="SigninFragment"
         tools:layout="@layout/fragment_signin">
         <action
@@ -31,7 +31,7 @@
     </fragment>
     <fragment
         android:id="@+id/signupFragment"
-        android:name="com.example.smartwallet_hw6.ui.SignupFragment"
+        android:name="com.example.smartwallet_hw6.ui.signup.SignupFragment"
         android:label="SignupFragment"
         tools:layout="@layout/fragment_signup">
         <action
@@ -49,7 +49,7 @@
     </fragment>
     <fragment
         android:id="@+id/incomeFragment"
-        android:name="com.example.smartwallet_hw6.ui.IncomeFragment"
+        android:name="com.example.smartwallet_hw6.ui.income.IncomeFragment"
         android:label="IncomeFragment"
         tools:layout="@layout/fragment_income">
         <action
@@ -58,7 +58,7 @@
     </fragment>
     <fragment
         android:id="@+id/expenseFragment"
-        android:name="com.example.smartwallet_hw6.ui.ExpenseFragment"
+        android:name="com.example.smartwallet_hw6.ui.expense.ExpenseFragment"
         android:label="ExpenseFragment"
         tools:layout="@layout/fragment_expense">
         <action
@@ -67,16 +67,15 @@
     </fragment>
     <dialog
         android:id="@+id/addEditFragment"
-        android:name="com.example.smartwallet_hw6.ui.AddEditFragment"
+        android:name="com.example.smartwallet_hw6.ui.addedit.AddEditFragment"
         android:label="AddEditFragment"
         tools:layout="@layout/fragment_add_edit">
         <argument
             android:name="item"
+            android:defaultValue="@null"
             app:argType="com.example.smartwallet_hw6.model.data.IncomeExpense"
-            app:nullable="true"
-            android:defaultValue="@null"/>
+            app:nullable="true" />
     </dialog>
-
 
 
 </navigation>
