--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,11 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.SmartWalletHW6" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="fontFamily">@font/josefin_sans_bold</item>
         <item name="backgroundTint">@color/white</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
+
 
     <style name="Theme.SmartWalletHW6" parent="Base.Theme.SmartWalletHW6" />
 </resources>
